--- a/Web/loginfunction/templates/index.html
+++ b/Web/loginfunction/templates/index.html
@@ -133,7 +133,6 @@
 <script src={% static "js/sb-admin.min.js" %}></script>
 <!-- Custom scripts for this page-->
 <script src={% static "js/sb-admin-datatables.min.js" %}></script>
-<script src={% static "js/sb-admin-charts.min.js" %}></script>
 </div>
 </body>
 
@@ -163,7 +162,7 @@
                 labels: labels,
                 datasets: [
                     {
-                        label: "Sessions",
+                        label: "餐厅",
                         lineTension: .3,
                         backgroundColor: "rgba(2,117,216,0.2)",
                         borderColor: "rgba(2,117,216,1)",
@@ -175,6 +174,34 @@
                         pointHitRadius: 20,
                         pointBorderWidth: 2,
                         data: data
+                    },
+                    {
+                        label: "宿舍",
+                        lineTension: .3,
+                        backgroundColor: "rgba(0,0,0,0.2)",
+                        borderColor: "rgba(0,0,0,1)",
+                        pointRadius: 5,
+                        pointBackgroundColor: "rgba(0,0,0,1)",
+                        pointBorderColor: "rgba(255,255,255,0.8)",
+                        pointHoverRadius: 5,
+                        pointHoverBackgroundColor: "rgba(0,0,0,1)",
+                        pointHitRadius: 20,
+                        pointBorderWidth: 2,
+                        data: [0,0,0,0,0,0,0,0,0,0,0,0,0,0]
+                    },
+                    {
+                        label: "其他",
+                        lineTension: .3,
+                        backgroundColor: "rgba(255,0,0,0.2)",
+                        borderColor: "rgba(255,0,0,1)",
+                        pointRadius: 5,
+                        pointBackgroundColor: "rgba(255,0,0,1)",
+                        pointBorderColor: "rgba(255,255,255,0.8)",
+                        pointHoverRadius: 5,
+                        pointHoverBackgroundColor: "rgba(255,0,0,1)",
+                        pointHitRadius: 20,
+                        pointBorderWidth: 2,
+                        data: [0,0,0,0,0,0,0,0,0,0,0,0,0,0]
                     }
                 ]
             },
@@ -205,13 +232,23 @@
                 var s = 0;
                 k = data[0];
                 s = data[1];
+                l=data[2];
                 myLineChart.data.labels.pop();
                 myLineChart.data.labels.unshift(k);
-                myLineChart.data.datasets[0].data.pop();
-                myLineChart.data.datasets[0].data.unshift(s);
+                if(l=="餐厅") {
+                    myLineChart.data.datasets[0].data.pop();
+                    myLineChart.data.datasets[0].data.unshift(s);
+                }else if(l=="宿舍"){
+                    myLineChart.data.datasets[1].data.pop();
+                    myLineChart.data.datasets[1].data.unshift(s);
+                }else{
+                     myLineChart.data.datasets[2].data.pop();
+                     myLineChart.data.datasets[2].data.unshift(s);
+                }
                 myLineChart.update();
                 console.log("更新时间:" + k);
                 console.log("当前人流量:" + s.toString() + "人次");
+                console.log(l);
                 var color = "";
                 var text = "";
                 if (s > {{ yuzhi_json_yellow }}) {
@@ -227,7 +264,7 @@
                 document.getElementById("icon_cards").className = "card text-white " + color + " o-hidden h-100 w-100";
                 document.getElementById("sos").innerHTML = "当前状态:" + text;
                 document.getElementById("update_time").innerHTML = "更新时间:" + k;
-                document.getElementById("update_flow").innerHTML = "当前人流量:" + s.toString() + "人次";
+                document.getElementById("update_flow").innerHTML = l+"当前人流量:" + s.toString() + "人次";
             },
             error: function () {
                 error("获取数据错误");
