--- a/Web/loginfunction/templates/charts.html
+++ b/Web/loginfunction/templates/charts.html
@@ -44,7 +44,26 @@
             <div class="col-lg-8">
                 <!-- Example Bar Chart Card-->
                 <div class="card mb-3">
-                    {% include "chart2.html" %}
+                    <div class="card-header">
+                        <i class="fa fa-bar-chart"></i> 人流量趋势
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-sm-8 my-auto">
+                                <canvas id="myBarChart" width="100" height="50"></canvas>
+                            </div>
+                            <div class="col-sm-4 text-center my-auto">
+                                <div class="h4 mb-0 text-primary">一天</div>
+                                <div class="small text-muted">正常人流天数</div>
+                                <hr>
+                                <div class="h4 mb-0 text-warning">两天</div>
+                                <div class="small text-muted">黄色预警天数</div>
+                                <hr>
+                                <div class="h4 mb-0 text-success">三天</div>
+                                <div class="small text-muted">红色预警天数</div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="card-footer small text-muted">更新时间:{{ current_time }}</div>
                 </div>
             </div>
@@ -182,18 +201,18 @@
                 var s = 0;
                 k = data[0];
                 s = data[1];
-                l=data[2];
+                l = data[2];
                 myLineChart.data.labels.pop();
                 myLineChart.data.labels.unshift(k);
-                if(l=="餐厅") {
+                if (l == "餐厅") {
                     myLineChart.data.datasets[0].data.pop();
                     myLineChart.data.datasets[0].data.unshift(s);
-                }else if(l=="宿舍"){
+                } else if (l == "宿舍") {
                     myLineChart.data.datasets[1].data.pop();
                     myLineChart.data.datasets[1].data.unshift(s);
-                }else{
-                     myLineChart.data.datasets[2].data.pop();
-                     myLineChart.data.datasets[2].data.unshift(s);
+                } else {
+                    myLineChart.data.datasets[2].data.pop();
+                    myLineChart.data.datasets[2].data.unshift(s);
                 }
                 myLineChart.update();
                 console.log("更新时间:" + k);
@@ -214,7 +233,7 @@
                 document.getElementById("icon_cards").className = "card text-white " + color + " o-hidden h-100 w-100";
                 document.getElementById("sos").innerHTML = "当前状态:" + text;
                 document.getElementById("update_time").innerHTML = "更新时间:" + k;
-                document.getElementById("update_flow").innerHTML = l+"当前人流量:" + s.toString() + "人次";
+                document.getElementById("update_flow").innerHTML = l + "当前人流量:" + s.toString() + "人次";
             },
             error: function () {
                 error("获取数据错误");
